openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-api
  labels:
    app: demo-api
spec:
  to:
    kind: Service
    name: demo-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
